# ALinkEmu

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
ALinkEmu/: ALinkEmu.hpp  CMakeLists.txt
ALinkEmu/Src/: Entry.cpp
ALinkEmu/Src/Base/: Base.hpp  Logger.hpp
ALinkEmu/Src/Base/Utils/: ArrayBuffer.hpp
ALinkEmu/Src/Core/: BaseChip.hpp  Logger.hpp
ALinkEmu/Src/EmulationPlatform/: Utils.hpp
ALinkEmu/Src/EmulationPlatform/AVR/: Utils.hpp
ALinkEmu/Src/EmulationPlatform/AVR/ATmega328p/: ATMega328p.cpp  ATMega328p.hpp
ALinkEmu/Src/EmulationPlatform/AVR/Chip/: AvrChip.cpp  AvrChip.hpp
ALinkEmu/Src/EmulationPlatform/AVR/Core/: Core.cpp  Core.hpp
ALinkEmu/Src/EmulationPlatform/AVR/FirmwareLoader/: FirmwareLoader.cpp  FirmwareLoader.hpp  FirmwareLoaderException.hpp
ALinkEmu/Src/EmulationPlatform/AVR/FirmwareLoader/Helpers/: IntelHexHelpers.hpp
ALinkEmu/Src/EmulationPlatform/AVR/IOController/: IOController.cpp  IOController.hpp
ALinkEmu/Src/EmulationPlatform/AVR/IODevice/: EEPROM.cpp  EEPROM.hpp  IODevice.hpp  IODeviceBase.hpp
ALinkEmu/Src/EmulationPlatform/AVR/InstructionExecutor/: AddressingModeDecoder.hpp  InstructionExecutor.cpp  InstructionExecutor.hpp
ALinkEmu/Src/EmulationPlatform/AVR/InterruptController/: InterruptController.cpp  InterruptController.hpp
ALinkEmu/Src/EmulationPlatform/AVR/Memory/: DataMemory.cpp  DataMemory.hpp  ProgramMemory.cpp  ProgramMemory.hpp
ALinkEmu/Test/: SpdLog.cpp  Test.cpp
ALinkEmu/Test/AVRTests/: InstructionsTest.cpp
Docs/: MVP.md  Overview.md
Sandbox/: CMakeLists.txt  Main.cpp
